//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  User_ID Int [pk, increment]
  User_name String [not null]
  User_email String [not null]
  User_password String [not null]
  User_tel String
  User_role String [not null]
  Pet Pet [not null]
  comment Comment [not null]
  Forum Forum [not null]
}

Table Pet {
  Pet_ID Int [pk, increment]
  Pet_name String [not null]
  Pet_DOB DateTime
  Pet_type String [not null]
  Pet_species String [not null]
  Pet_gender String [not null]
  Pet_description String
  User User [not null]
  User_ID Int [not null]
  Case Case
}

Table Appointment {
  Appointment_ID Int [pk, increment]
  Appointment_date DateTime [not null]
  Appointment_time String [not null]
  Appointment_status Appointment_status
  Case_ID Int [unique, not null]
  Case Case [not null]
  Room_ID Int
  Room Room
}

Table Room {
  Room_ID Int [pk, increment]
  Room_name String [not null]
  Room_type String [not null]
  Appointment Appointment [not null]
}

Table Case {
  Case_ID Int [pk, increment]
  Pet_ID Int [unique, not null]
  Pet Pet [not null]
  State_ID Int [unique, not null]
  State State [not null]
  Service_ID Int [not null]
  Service Service [not null]
  Appointment Appointment
}

Table State {
  State_ID Int [pk, increment]
  State_detail String [not null]
  Case Case
  Recuperate Recuperate
}

Table Forum {
  Forum_ID Int [pk, increment]
  Forum_title String [not null]
  Forum_content String [not null]
  Forum_created DateTime [not null]
  User_ID Int [not null]
  User User [not null]
  Comment Comment [not null]
}

Table Comment {
  Comment_ID Int [pk, increment]
  Comment_detail String [not null]
  Comment_created DateTime [not null]
  User User
  User_ID Int
  Forum Forum
  Forum_ID Int
}

Table Recuperate {
  Recuperation_ID Int [pk, increment]
  Start_date DateTime [not null]
  End_date DateTime
  State_ID Int [unique, not null]
  State State [not null]
}

Table Service {
  Service_ID Int [pk, increment]
  Service_name String [not null]
  Service_type Service_type [not null]
  Service_recuperate Boolean [not null, default: false]
  Case Case [not null]
}

Enum Service_type {
  Grooming
  Boarding
  Training
  Others
}

Enum Appointment_status {
  Pending
  Approved
  Rejected
}

Ref: Pet.User_ID > User.User_ID

Ref: Appointment.Case_ID - Case.Case_ID

Ref: Appointment.Room_ID > Room.Room_ID

Ref: Case.Pet_ID - Pet.Pet_ID

Ref: Case.State_ID - State.State_ID

Ref: Case.Service_ID > Service.Service_ID

Ref: Forum.User_ID > User.User_ID

Ref: Comment.User_ID > User.User_ID

Ref: Comment.Forum_ID > Forum.Forum_ID

Ref: Recuperate.State_ID - State.State_ID